# timelog

./: .gitignore  LICENSE  Makefile  README.md  requirements.txt.freeze  setup.cfg  setup.py  timelog-cli.py
.scripts/: init.mk  install.mk  makeshell
scripts/: timelog
timelog/: __init__.py  cli.py  parser.py  timelog.py
