[metadata]
name = timelog
version = attr: timelog.__version__
author = ice1e0
author_email = ls@ice1e0.com
description = Timelog is a style of logging your time in markdown text files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ice1e0/timelog
project_urls =
    Bug Tracker = https://github.com/ice1e0/timelog/issues
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    click>=7.1.0

[options.extras_require]
test =
    pytest
    pytest_click

[options.packages.find]
where = timelog

[options.entry_points]
console_scripts =
    timelog = timelog.cli:parse_file
